<resources>
    <string name="app_name">Filmosis</string>
    <string name="prefs_file">com.example.filmosis.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id" translatable="false">383558741656-j89oaq4etmfpkg6s4pocgt12rl4s3bgn.apps.googleusercontent.com</string>
    <string name="page_home">Inicio</string>
    <string name="page_explore">Explorar</string>
    <string name="page_user">Perfil</string>
    <string name="page_social">Social</string>

    <!--    Explore fragment -->
    <string name="genresContainerTitle">Géneros</string>
    <!--    Movie Row Menu-->
    <string name="movieRowMenu_addToList">Añadir a lista</string>
    <string name="movieRowMenu_downloadCover">Descargar portada</string>
    <string name="movieRowMenu_shareMovie">Compartir pelicula</string>
    <!--    Drawer Menu-->
    <string name="drawerMenu_myLists">Mis Listas</string>

    <!--    Search Filter Menu-->
    <string name="searchFilterMenu_searchMovies">Buscar películas</string>
    <string name="searchFilterMenu_searchDirectors">Buscar personas</string>

    <!--    Item person Movie Cast-->
    <string name="itemPersonMovieCast_CharacterLabel">Personaje:</string>

    <!--    Person Details Fragment-->
    <string name="personDetails_biographyTitle">Biografía</string>
    <string name="personDetails_personMoviesRvTitle">Películas</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido de vuelta, </string>
    <string name="search_action">Buscar</string>
    <string name="Notificacion">Notificación</string>
    <string name="pel_culas_populares">Películas populares</string>
    <string name="tendencia">En Tendencia esta semana</string>
    <string name="best_rated">Mejor valoradas</string>
    <string name="popular">Populares</string>
    <string name="latest">Últimas</string>
    <string name="upcoming">Próximas</string>
    <string name="ver_mas">Ver todo</string>
    <string name="pel_prox">Próximamente</string>
    <string name="Actualmente">Actualmente</string>
    <string name="servicios">Servicios</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="ver_todo">Ver todo</string>
    <string name="movie_director_placeholder">Director de ejemplo</string>
    <string name="movie_title_placeholder">Título de ejemplo</string>
    <string name="movie_date_placeholder">1970-01-01</string>
    <string name="createList_addListTv">Añadir una lista</string>

</resources>