<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_title_placeholder"
        android:textColor="?attr/colorOnBackground"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_movie_director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_director_placeholder"
        android:textColor="?attr/colorOnBackground"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_movie_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_movie_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_date_placeholder"
        android:textColor="?attr/colorOnBackground"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_movie_director"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
