<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeFragment"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/explore_searchViewTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toStartOf="@+id/home_searchFilterImageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <SearchView
                    android:id="@+id/home_searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_view_border"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:iconifiedByDefault="false"
                    android:paddingHorizontal="8dp"
                    android:queryBackground="@null"
                    android:queryHint="Buscar películas" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/home_searchFilterImageButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_manage_search_24"
                android:tint="?attr/colorOnSurfaceVariant"
                app:layout_constraintBottom_toBottomOf="@+id/explore_searchViewTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/explore_searchViewTextInputLayout" />

            <TextView
                android:id="@+id/bienvenida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textColor="?attr/colorOnBackground"
                android:textSize="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explore_searchViewTextInputLayout" />

            <TextView
                android:id="@+id/home_tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="?attr/colorPrimary"
                android:textSize="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bienvenida" />

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_tvUsuario">

                <TextView
                    android:id="@+id/tvPelisPopu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/recomendaciones"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="26sp"
                    android:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonShowAllRecomendaciones"
                    style="@style/TransparentBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/ver_mas"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_rigth_arrow"
                    app:iconGravity="textEnd"
                    app:iconSize="15dp"
                    app:iconTint="?attr/colorPrimary" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieRecomendedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
                app:reverseLayout="true" />

            <LinearLayout
                android:id="@+id/home_proximamenteTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/movieRecomendedRecyclerView"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:id="@+id/tvPelisProx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pel_prox"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="26sp"
                    android:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonShowAllProximamente"
                    style="@style/TransparentBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/ver_mas"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_rigth_arrow"
                    app:iconGravity="textEnd"
                    app:iconSize="15dp"
                    app:iconTint="?attr/colorPrimary" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesSoonRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/home_proximamenteTitleContainer"
                app:reverseLayout="true"
                tools:layout_editor_absoluteX="1dp" />

            <LinearLayout
                android:id="@+id/uwu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/moviesSoonRecyclerView"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:id="@+id/tvPelisPopus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pel_culas_populares"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="26sp"
                    android:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonShowAllPopulares"
                    style="@style/TransparentBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/ver_mas"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_rigth_arrow"
                    app:iconGravity="textEnd"
                    app:iconSize="15dp"
                    app:iconTint="?attr/colorPrimary" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/uwu"
                app:reverseLayout="true"
                tools:layout_editor_absoluteX="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout13"
                tools:layout_editor_absoluteX="1dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/serviciosRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/moviesRecyclerView"
                tools:layout_editor_absoluteX="1dp">

                <TextView
                    android:id="@+id/tvServicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/servicios"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="26sp"
                    android:visibility="visible" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonShowAllServices"
                    style="@style/TransparentBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/ver_mas"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_rigth_arrow"
                    app:iconGravity="textEnd"
                    app:iconSize="15dp"
                    app:iconTint="?attr/colorPrimary" />


            </LinearLayout>

            <!--            -->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>